--- a/style.css
+++ b/style.css
@@ -4,8 +4,13 @@
   box-sizing: border-box;
 }
 
+body{
+  background: linear-gradient(rgba(2, 0, 36, 0.644) 0%, rgba(9, 9, 121, 0.568) 35%, rgba(0,212,255,1) 100%);
+}
+
 .header{
-  background: aquamarine;
+  display: flex;
+  justify-content: center;
   text-align: center;
   margin-top: 50px;
 }
@@ -16,6 +21,7 @@
   letter-spacing: 5px;
   margin-bottom: 10px;
   text-decoration: underline;
+  font-family: Karla, Verdana, sans-serif;
   
 }
 .header h1{
@@ -25,4 +31,48 @@
   letter-spacing: 5px;
   margin-bottom: 10px;
   margin-top: 20px;
+  font-family: Karla, Verdana, sans-serif;
+}
+
+.container{
+  width: 90%;
+  border: 4px solid black;
+  border-radius: 20px;
+  background: transparent;
+  padding: 15px;
+}
+
+.footer{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 50px;
+}
+
+.footer p{
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-family: Karla, Verdana, sans-serif;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.link{
+  color: #2d2b31;
+}
+
+.link:hover{
+  color: #2d2b31;
+  transition: color .2s ease-out;
+  transition: color .2s ease-out
+}
+
+.link:focus,
+.link:hover {
+  color: #9bccbb;
+}
+.link:active {
+  color: #79bba4;
+  transition: color .2s ease-out;
 }
