--- a/Milestone 1/style.css
+++ b/Milestone 1/style.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 body{
@@ -10,7 +11,7 @@ body{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1%;
+  padding: 2%;
   background: #BDC1CA;
 }
 
@@ -277,34 +278,6 @@ h1.m_Auto, .proficiency-level {
   display: none;
 }
 
-/* Right Section (Customization) */
-.resume-customize {
-  width: 30%;
-  background-color: #eaeaea;
-  padding: 20px;
-  border-radius: 10px;
-}
-
-.resume-customize h2 {
-  margin-bottom: 20px;
-}
-
-.customization label {
-  display: block;
-  margin-bottom: 5px;
-  color: #3c3e3f;
-}
-
-.customization select, .customization input[type="range"], .customization input[type="number"] {
-  width: 100%;
-  margin-bottom: 20px;
-  padding: 5px;
-}
-
-input[type="checkbox"] {
-  margin-bottom: 20px;
-}
-
 
 @media print {
   @page {
@@ -391,10 +364,6 @@ input[type="checkbox"] {
   .topBar, .BottomBar, .leftSideBar, .rightSideBar {
     display: none;
   }
-
-  #CustomDiv{
-    display: none;
-  }
 }
 
 
@@ -469,10 +438,5 @@ input[type="checkbox"] {
 
   header {
     height: auto;
-  }
-
-  #customizationDiv{
-    flex-direction: column;
-    row-gap: 0px;
   }
 }
