--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: linear-gradient(135deg, rgba(2, 0, 36, 0.8), rgba(9, 9, 121, 0.8), rgba(0, 212, 255, 1));
+  background: linear-gradient(135deg, #ddcf07, #bbb9b9);
   font-family: 'Poppins', sans-serif;
   padding: 20px;
   color: #333;
@@ -26,7 +26,7 @@ body {
   letter-spacing: 5px;
   margin-bottom: 10px;
   text-decoration: underline;
-  color: #fff;
+  color: #333;
 }
 
 .header h1 {
@@ -35,7 +35,7 @@ body {
   text-transform: uppercase;
   letter-spacing: 5px;
   margin-bottom: 10px;
-  color: #fff;
+  color: #333;
 }
 
 .container {
@@ -43,7 +43,7 @@ body {
   border: 4px solid white;
   border-radius: 20px;
   padding: 15px;
-  background: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.7);
 }
 
 .layout-heading {
@@ -54,7 +54,7 @@ body {
 .layout-heading h1 {
   font-size: 36px;
   font-weight: bold;
-  color: #fff;
+  color: #333;
   text-transform: uppercase;
 }
 
@@ -69,7 +69,7 @@ body {
 
 .layout-option {
   width: 45%;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.5);
   padding: 20px;
   border-radius: 20px;
   transition: transform 0.3s ease;
@@ -96,7 +96,7 @@ body {
 .layout-option p {
   font-size: 18px;
   font-weight: 600;
-  color: #ddd;
+  color: #555;
 }
 
 .layout-link {
@@ -108,7 +108,7 @@ body {
 }
 
 .layout-link:hover {
-  color: #9bccbb;
+  color: #ffc107;
 }
 
 /* Footer */
@@ -123,16 +123,16 @@ body {
   font-size: 16px;
   text-transform: uppercase;
   letter-spacing: 5px;
-  color: #fff;
+  color: #333;
 }
 
 .link {
-  color: #9bccbb;
+  color: #333;
   transition: color 0.2s ease-out;
 }
 
 .link:hover {
-  color: #fff;
+  color: blue;
 }
 
 /* Responsive Design */
